--- a/index.html
+++ b/index.html
@@ -4,46 +4,394 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lee Curtis Portfolio | Junior Developer</title>
 
-    <!-- * Preloads the CSS files for header and footer early so they load faster and help avoid layout shifts -->
+    <!-- * Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preload"
-      href="/HumbleeCreative.github.io/header.css"
-      as="style"
-    />
-    <link
-      rel="preload"
-      href="/HumbleeCreative.github.io/footer.css"
-      as="style"
+      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700;900&display=swap"
+      rel="stylesheet"
     />
 
-    <!-- * Links the main stylesheet that controls the overall look and layout of the page -->
-    <link rel="stylesheet" href="/HumbleeCreative.github.io/style.css" />
+    <!-- * Material Symbols -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      rel="stylesheet"
+    />
 
-    <title>Lee Curtis - Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
-    <!-- * Loads the script that dynamically adds the header and footer content into the page (using custom elements) -->
-    <script src="/HumbleeCreative.github.io/headerFooterManager.js"></script>
-
-    <!-- * Main container that uses flexbox to arrange header, main content, and footer vertically -->
-    <div id="flex-layout">
-      <!-- * Custom header element - class hides it initially to prevent flash of unstyled content (FOUC) until it's ready -->
-      <custom-header class="fouc-hidden"></custom-header>
-
-      <!-- * Main content section where the portfolio projects and other page content will go -->
-      <main>
-        <!-- ? Empty div used as an anchor point so "back to top" links can smoothly scroll here -->
-        <div id="top"></div>
-        <h1>This is a placeholder</h1>
-      </main>
-
-      <!-- * Custom footer element - also hidden initially to prevent flash of unstyled content (FOUC) -->
-      <custom-footer class="fouc-hidden"></custom-footer>
+  <body class="dark-mode">
+    <!-- * Subtle background effects -->
+    <div class="background-overlay">
+      <div class="grid-layer"></div>
     </div>
 
-    <!-- * Main JavaScript file that handles interactive features like the dark mode toggle and any other page logic -->
-    <script src="/HumbleeCreative.github.io/script.js"></script>
+    <!-- * Header and Nav Sections -->
+    <header class="nav-container">
+      <nav class="main-nav">
+        <a href="#home" class="nav-home-btn" aria-label="Home">
+          <span class="material-symbols-outlined">home</span>
+        </a>
+
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+        </ul>
+
+        <a href="#contact" class="nav-connect-btn">
+          Connect
+          <span class="material-symbols-outlined">bolt</span>
+        </a>
+
+        <!-- * Mobile controls -->
+        <button
+          id="menu-toggle"
+          class="menu-toggle-btn"
+          aria-label="Menu Toggle"
+        >
+          <span class="material-symbols-outlined">menu</span>
+        </button>
+
+        <button
+          id="theme-toggle"
+          class="theme-toggle-btn"
+          aria-label="Theme Toggle"
+        >
+          <span class="material-symbols-outlined sun-icon">light_mode</span>
+          <span class="material-symbols-outlined moon-icon">dark_mode</span>
+        </button>
+      </nav>
+
+      <!-- * Mobile menu overlay -->
+      <div id="mobile-menu" class="mobile-menu-overlay">
+        <button id="menu-close" class="menu-close-btn">
+          <span class="material-symbols-outlined">close</span>
+        </button>
+        <ul class="mobile-nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <!-- * Main Content Sections -->
+    <main>
+      <!-- * Hero section -->
+      <section id="home" class="hero">
+        <div class="blur-blob purple-blob"></div>
+        <div class="blur-blob pink-blob"></div>
+
+        <div class="hero-content">
+          <div class="status-badge">
+            <span class="status-dot"></span>
+            CURRENTLY WORKING ON: My Portfolio Website
+          </div>
+
+          <h1 class="hero-title">
+            <span class="text-white-gradient">LEE CURTIS</span><br />
+            <span class="text-neon-gradient">JUNIOR DEVELOPER</span>
+          </h1>
+
+          <p class="hero-subtitle">
+            Currently deep-diving into full-stack development on JustIT's
+            Software Development Bootcamp. Building apps that look clean and
+            solve real problems.
+          </p>
+
+          <div class="hero-cta">
+            <a href="#projects" class="btn btn-primary">
+              View My Work
+              <span class="material-symbols-outlined">arrow_forward</span>
+            </a>
+            <a href="#contact" class="btn btn-secondary">Contact Me</a>
+          </div>
+        </div>
+      </section>
+
+      <!-- About section -->
+      <section id="about" class="section about">
+        <div class="container about-grid">
+          <div class="about-image-wrapper">
+            <div class="image-accent-glow"></div>
+            <figure class="profile-frame">
+              <img
+                src="Headshot.webp"
+                alt="A professional headshot portrait of Lee Curtis"
+              />
+            </figure>
+          </div>
+
+          <div class="about-text">
+            <h2 class="section-title">
+              About <span class="text-neon-gradient">Me</span>
+            </h2>
+            <div class="title-underline"></div>
+
+            <p>
+              Hey there, I am a Junior Developer in training, currently
+              transitioning into the tech industry through an intensive bootcamp
+              with JustIT. I am mainly working with HTML, CSS, JavaScript and
+              creating a solid foundation in full-stack web technologies.
+            </p>
+            <br />
+
+            <p>
+              <strong>Something I have learnt about myself:</strong>
+            </p>
+            <p>
+              I noticed that I could sometimes get stuck on making things look
+              pretty before getting the functionality down first. Since
+              realising this I now focus on getting the functionality down first
+              before moving on to the styling.
+            </p>
+            <br />
+            <p>Something our tutor said has really stuck with me</p>
+            <p>
+              <span class="text-neon-gradient"
+                ><strong>Make it work, Make it pretty</strong></span
+              >
+            </p>
+
+            <div class="stats-grid">
+              <div class="stat-card">
+                <span class="stat-num text-neon-pink">1+</span>
+                <span class="stat-label">Years Experience</span>
+              </div>
+              <div class="stat-card">
+                <span class="stat-num text-neon-blue">2+</span>
+                <span class="stat-label">Projects Deployed</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- * Skills section -->
+      <section id="skills" class="section skills-section">
+        <div class="container text-center">
+          <h2 class="section-title">
+            <span class="text-neon-pink">Skills</span>
+          </h2>
+
+          <ul class="skills-flex">
+            <li class="skill-item">
+              <div class="skill-orb" data-skill="html">
+                <span class="material-symbols-outlined">html</span>
+              </div>
+              <span class="skill-name">HTML5</span>
+            </li>
+            <li class="skill-item">
+              <div class="skill-orb" data-skill="css">
+                <span class="material-symbols-outlined">css</span>
+              </div>
+              <span class="skill-name">CSS3</span>
+            </li>
+            <li class="skill-item">
+              <div class="skill-orb" data-skill="javascript">
+                <span class="material-symbols-outlined">javascript</span>
+              </div>
+              <span class="skill-name">JavaScript</span>
+            </li>
+            <li class="skill-item">
+              <div class="skill-orb" data-skill="cs">
+                <span class="material-symbols-outlined">code</span>
+              </div>
+              <span class="skill-name">C#</span>
+            </li>
+            <li class="skill-item">
+              <div class="skill-orb" data-skill="nodejs">
+                <span class="material-symbols-outlined">terminal</span>
+              </div>
+              <span class="skill-name">Node.js</span>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- * Projects section -->
+      <section id="projects" class="section">
+        <div class="container">
+          <header class="section-header">
+            <div>
+              <h2 class="section-title">
+                My <span class="text-neon-purple">Projects</span>
+              </h2>
+              <p class="section-subtitle">
+                A collection of things I've built along the way
+              </p>
+            </div>
+            <a
+              href="https://github.com/HumbleeCreative"
+              class="github-link"
+              target="_blank"
+              rel="noopener"
+            >
+              View GitHub
+              <span class="material-symbols-outlined">open_in_new</span>
+            </a>
+          </header>
+
+          <div class="projects-grid">
+            <!-- ! IMPORTANT: Placeholder projects - These will be replaced with real projects as I create them -->
+            <!-- Project 1: Placeholder 1 -->
+            <article class="project-card glow-purple">
+              <div class="project-img">
+                <div class="project-overlay">
+                  <button class="overlay-btn btn-yellow">
+                    <span class="material-symbols-outlined">code</span>
+                  </button>
+                  <button class="overlay-btn btn-white">
+                    <span class="material-symbols-outlined">visibility</span>
+                  </button>
+                </div>
+                <img
+                  src="https://example.com/"
+                  alt="Screenshot of Placeholder 1 project"
+                />
+              </div>
+              <div class="project-body">
+                <h3>Placeholder 1</h3>
+                <p>
+                  This is a placeholder project. These will be replaced with
+                  real projects as I create them
+                </p>
+                <ul class="tag-group">
+                  <li><span class="tag" data-skill="html">HTML</span></li>
+                  <li><span class="tag" data-skill="css">CSS</span></li>
+                  <li>
+                    <span class="tag" data-skill="javascript">JavaScript</span>
+                  </li>
+                </ul>
+              </div>
+            </article>
+            <!-- Project 2: Placeholder 2 -->
+            <article class="project-card glow-blue">
+              <div class="project-img">
+                <div class="project-overlay">
+                  <button class="overlay-btn btn-yellow">
+                    <span class="material-symbols-outlined">code</span>
+                  </button>
+                  <button class="overlay-btn btn-white">
+                    <span class="material-symbols-outlined">visibility</span>
+                  </button>
+                </div>
+                <img
+                  src="https://example.com/"
+                  alt="Screenshot of Placeholder 2 project"
+                />
+              </div>
+              <div class="project-body">
+                <h3>Placeholder 2</h3>
+                <p>
+                  This is a placeholder project. These will be replaced with
+                  real projects as I create them
+                </p>
+                <ul class="tag-group">
+                  <li><span class="tag" data-skill="html">HTML</span></li>
+                  <li><span class="tag" data-skill="css">CSS</span></li>
+                  <li>
+                    <span class="tag" data-skill="javascript">JavaScript</span>
+                  </li>
+                </ul>
+              </div>
+            </article>
+            <!-- Project 3: Placeholder 3 -->
+            <article class="project-card glow-pink">
+              <div class="project-img">
+                <div class="project-overlay">
+                  <button class="overlay-btn btn-yellow">
+                    <span class="material-symbols-outlined">code</span>
+                  </button>
+                  <button class="overlay-btn btn-white">
+                    <span class="material-symbols-outlined">visibility</span>
+                  </button>
+                </div>
+                <img
+                  src="https://example.com/"
+                  alt="Screenshot of Placeholder 3 project"
+                />
+              </div>
+              <div class="project-body">
+                <h3>Placeholder 3</h3>
+                <p>
+                  This is a placeholder project. These will be replaced with
+                  real projects as I create them
+                </p>
+                <ul class="tag-group">
+                  <li><span class="tag" data-skill="html">HTML</span></li>
+                  <li><span class="tag" data-skill="css">CSS</span></li>
+                  <li>
+                    <span class="tag" data-skill="javascript">JavaScript</span>
+                  </li>
+                </ul>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- * Contact section -->
+      <section id="contact" class="section contact-section">
+        <div class="container-narrow">
+          <div class="contact-card">
+            <div class="card-bg-glow top"></div>
+            <div class="card-bg-glow bottom"></div>
+
+            <div class="contact-content">
+              <span class="material-symbols-outlined contact-icon">mail</span>
+              <h2>Get In <span class="text-neon-gradient">Touch</span></h2>
+              <p>Ready to start a new project? My inbox is always open.</p>
+
+              <form class="contact-form" name="contact">
+                <div class="form-row">
+                  <input type="text" name="name" placeholder="Name" required />
+                  <input
+                    type="email"
+                    name="email"
+                    placeholder="Email"
+                    required
+                  />
+                </div>
+                <textarea
+                  name="message"
+                  placeholder="Your Message..."
+                  rows="4"
+                  required
+                ></textarea>
+                <button type="submit" class="btn btn-gradient">
+                  Send Message
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- * Footer Sections -->
+    <footer class="footer">
+      <div class="container footer-content">
+        <p class="copyright">
+          Made with <span class="text-neon-purple">Blood</span>,
+          <span class="text-neon-pink">Sweat</span>, and
+          <span class="text-neon-blue">Tears</span>
+        </p>
+        <p>© HumbleeCreative 2025</p>
+        <ul class="footer-links">
+          <li><a href="https://github.com/HumbleeCreative">GitHub</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/lee-curtis-dev/">LinkedIn</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <script src="script.js" defer></script>
   </body>
 </html>
