Some Small bugfixes and css changes

--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
         <div class="blur-blob pink-blob"></div>
 
         <div class="hero-content">
+          <div class="dev-note">
+            <span class="material-symbols-outlined"
+              ><span class="text-neon-gradient">person_alert</span></span
+            >
+            <p>
+              <strong><span class="text-neon-gradient">Dev Note:</span></strong>
+              I have noticed some performance issues on mobile Safari. I am
+              currently looking in to different optimisations and fixes. This is
+              still a work in progress
+            </p>
+          </div>
           <div class="status-badge">
             <span class="status-dot"></span>
             CURRENTLY WORKING ON: My Portfolio Website
@@ -109,7 +120,10 @@
               View My Work
               <span class="material-symbols-outlined">arrow_forward</span>
             </a>
-            <a href="#contact" class="btn btn-secondary">Contact Me</a>
+            <a href="#contact" class="btn btn-secondary"
+              >Contact Me
+              <span class="material-symbols-outlined">chat</span>
+            </a>
           </div>
         </div>
       </section>
@@ -196,7 +210,7 @@
               <div class="skill-orb" data-skill="javascript">
                 <span class="material-symbols-outlined">javascript</span>
               </div>
-              <span class="skill-name">JavaScript</span>
+              <span class="skill-name">JS</span>
             </li>
             <li class="skill-item">
               <div class="skill-orb" data-skill="cs">
@@ -344,7 +358,7 @@
             <div class="card-bg-glow bottom"></div>
 
             <div class="contact-content">
-              <span class="material-symbols-outlined contact-icon">mail</span>
+              <span class="material-symbols-outlined contact-icon">chat</span>
               <h2>Get In <span class="text-neon-gradient">Touch</span></h2>
               <p>Ready to start a new project? My inbox is always open.</p>
 
