--- a/index.html
+++ b/index.html
@@ -9,12 +9,28 @@
     <!-- * Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Inter Font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- IBM Plex Sans -->
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    /> -->
+    <!-- Noto Sans Font -->
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100..900&display=swap"
+      rel="stylesheet"
+    /> -->
+    <!-- Spline Font -->
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    /> -->
 
-    <!-- * Material Symbols -->
+    <!-- * Material Icons/Symbols -->
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
       rel="stylesheet"
@@ -101,7 +117,8 @@
           </div>
           <div class="status-badge">
             <span class="status-dot"></span>
-            CURRENTLY WORKING ON: My Portfolio Website
+            <span class="text-neon-gradient">Current Project:</span>Portfolio
+            Website
           </div>
 
           <h1 class="hero-title">
