--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
                   </button>
                 </div>
                 <img
-                  src="https://example.com/"
-                  alt="Screenshot of Placeholder 1 project"
+                  src="https://placehold.co/600x400/cc66ff/FFF?text=Project\n1"
+                  alt="Placeholder for Project 1"
                 />
               </div>
               <div class="project-body">
@@ -313,8 +313,8 @@
                   </button>
                 </div>
                 <img
-                  src="https://example.com/"
-                  alt="Screenshot of Placeholder 2 project"
+                  src="https://placehold.co/600x400/6699ff/FFF?text=Project\n2"
+                  alt="Placeholder for Project 2"
                 />
               </div>
               <div class="project-body">
@@ -344,8 +344,8 @@
                   </button>
                 </div>
                 <img
-                  src="https://example.com/"
-                  alt="Screenshot of Placeholder 3 project"
+                  src="https://placehold.co/600x400/ff66ff/FFF?text=Project\n3"
+                  alt="Placeholder for Project 3"
                 />
               </div>
               <div class="project-body">
