Updated the project section
- Added Portfolio Website and Flappy Bird Clone.
- Hero particle system is currently a placeholder; I plan to rebuild it completely from scratch to ensure I fully understand what I have implemented.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="image-accent-glow"></div>
             <figure class="profile-frame">
               <img
-                src="Headshot.webp"
+                src="/assets/images/Headshot.webp"
                 alt="A professional headshot portrait of Lee Curtis"
               />
             </figure>
@@ -277,23 +277,36 @@
             <article class="project-card glow-purple reveal">
               <div class="project-img">
                 <div class="project-overlay">
-                  <button class="overlay-btn btn-yellow" aria-label="View Code">
+                  <a
+                    href="https://github.com/HumbleeCreative/HumbleeCreative.github.io"
+                    class="overlay-btn btn-yellow"
+                    target="_blank"
+                    rel="noopener"
+                    aria-label="View Code"
+                  >
                     <span class="material-symbols-outlined">code</span>
-                  </button>
-                  <button class="overlay-btn btn-white" aria-label="View Live">
+                  </a>
+                  <a
+                    href="https://leecurtis.dev"
+                    class="overlay-btn btn-white"
+                    target="_blank"
+                    rel="noopener"
+                    aria-label="View Live"
+                  >
                     <span class="material-symbols-outlined">visibility</span>
-                  </button>
+                  </a>
                 </div>
                 <img
-                  src="https://picsum.photos/id/48/600/400"
-                  alt="Placeholder for Project 1"
+                  src="assets/images/projects/portfolio-website/portfolio.png"
+                  alt="Screenshot of Portfolio website"
                 />
               </div>
               <div class="project-body">
-                <h3>Placeholder 1</h3>
+                <h3>My Portfolio Site</h3>
                 <p>
-                  This is a placeholder project. These will be replaced with
-                  real projects as I create them.
+                  My portfolio site is one of the first major projects that I
+                  have been working on. I have been building the website using
+                  HTML, vanilla CSS, and Javascript.
                 </p>
                 <ul class="tag-group">
                   <li><span class="tag" data-skill="html">HTML</span></li>
@@ -309,23 +322,37 @@
             <article class="project-card glow-blue reveal">
               <div class="project-img">
                 <div class="project-overlay">
-                  <button class="overlay-btn btn-yellow" aria-label="View Code">
+                  <a
+                    href="https://github.com/HumbleeCreative/flappy-bird-clone"
+                    class="overlay-btn btn-yellow"
+                    target="_blank"
+                    rel="noopener"
+                    aria-label="View Code"
+                  >
                     <span class="material-symbols-outlined">code</span>
-                  </button>
-                  <button class="overlay-btn btn-white" aria-label="View Live">
+                  </a>
+                  <a
+                    href="https://leecurtis.dev/flappy-bird-clone"
+                    class="overlay-btn btn-white"
+                    target="_blank"
+                    rel="noopener"
+                    aria-label="View Live"
+                  >
                     <span class="material-symbols-outlined">visibility</span>
-                  </button>
+                  </a>
                 </div>
                 <img
-                  src="https://picsum.photos/id/201/600/400"
-                  alt="Placeholder for Project 2"
+                  src="assets/images/projects/flappy-bird-clone/flappy-dragon.png"
+                  alt="Screenshot of Flappy Dragon App"
                 />
               </div>
               <div class="project-body">
-                <h3>Placeholder 2</h3>
+                <h3>Flappy Dragon</h3>
                 <p>
-                  This is a placeholder project. These will be replaced with
-                  real projects as I create them.
+                  This is my first game project. I wanted to create a flappy
+                  bird clone called 'Flappy Dragon'. I have been using this
+                  project to learn about the HTML canvas element and practising
+                  my skills with both back end and front end technologies.
                 </p>
                 <ul class="tag-group">
                   <li><span class="tag" data-skill="html">HTML</span></li>
@@ -337,16 +364,28 @@
               </div>
             </article>
 
-            <!-- Project 3 -->
+            <!-- Project 3
             <article class="project-card glow-pink reveal">
               <div class="project-img">
                 <div class="project-overlay">
-                  <button class="overlay-btn btn-yellow" aria-label="View Code">
+                  <a
+                    href="https://github.com/HumbleeCreative/HumbleeCreative.github.io"
+                    class="overlay-btn btn-yellow"
+                    target="_blank"
+                    rel="noopener"
+                    aria-label="View Code"
+                  >
                     <span class="material-symbols-outlined">code</span>
-                  </button>
-                  <button class="overlay-btn btn-white" aria-label="View Live">
+                  </a>
+                  <a
+                    href="https://leecurtis.dev"
+                    class="overlay-btn btn-white"
+                    target="_blank"
+                    rel="noopener"
+                    aria-label="View Live"
+                  >
                     <span class="material-symbols-outlined">visibility</span>
-                  </button>
+                  </a>
                 </div>
                 <img
                   src="https://picsum.photos/id/366/600/400"
@@ -367,7 +406,7 @@
                   </li>
                 </ul>
               </div>
-            </article>
+            </article> -->
           </div>
         </div>
       </section>
